<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".afterLoginMainPage"
    android:background="@drawable/register">

    <TextView
        android:id="@+id/tv_logout_afterLogPage"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_gravity="right|top"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/log_out"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_welcome_afterLogPage"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical"
        android:text="@string/welcome"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_username_afterLogPage"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center|center_vertical"
        android:text="@string/your_username"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_game_data_afterLogPage"
        android:layout_width="match_parent"
        android:layout_height="315dp"
        android:gravity="center_horizontal"
        android:text="@string/your_game_data"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/but_find_button_afterLogPage"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/find_game_buddy" />

    <Button
        android:id="@+id/but_recommend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Recommend Game" />
</LinearLayout>